# bmp-read-write

./: CMakeLists.txt  README.md
src/: bmp.c  bmp.h  fun.c  fun.h  func.c  func.h  img.c  img.h  main.c  png.c  png.h
